# fun-console

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  colors.cpp  colors.h  console.cpp  console.h  emoji-data.cpp  emoji-data.h  emoji.cpp  emoji.h  main.cpp  markdown.cpp  markdown.h  platform-factory.cpp  platform-factory.h  platform-posix.cpp  platform-posix.h  platform-windows.cpp  platform-windows.h  platform.cpp  platform.h
test/: CMakeLists.txt  colors-test.cpp  console-test.cpp  console_test.cpp  emoji_test.cpp  markdown-test.cpp
tools/: build-win32-debug.bat  build-win32-release.bat  build-win64-debug.bat  build-win64-release.bat  update-emoji.py
